[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
rusqlite = {version = "0.30.0", features = ["bundled"]}
regex = {version = "1.10.2", features = ["unicode"]}
